bug: fix bug with small strip above footer bar -Used "overflow: scroll" instead of "overflow-y: scroll" causing a empty scroll bar to be created

--- a/main.css
+++ b/main.css
@@ -26,26 +26,21 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  height: 100%;
   width: 100%;
   height: 100vh;
   box-sizing: border-box;
   flex: 1;
-  padding: 12px;
-  overflow: scroll;
+  overflow-y: scroll;
 }
 
 .page-section {
-  margin-top: 12px;
-  margin-bottom: 12px;
+  height: 100%;
   display: none;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
 
 .page-section.active {
-  margin-top: 12px;
-  margin-bottom: 25px;
   height: 100%;
   display: block;
   opacity: 1;
@@ -313,4 +308,3 @@ p {
   from {opacity: .4}
   to {opacity: 1}
 }
-
